--- a/projeto-login/estilos/media-query.css
+++ b/projeto-login/estilos/media-query.css
@@ -1,12 +1,13 @@
 @charset "UTF-8";
 
-@media screen and (min-width: 769px) and (max-width: 992px) {
+@media screen and (min-width: 769px) and (max-width: 992px) { /* CONFIGURAÇÕES PARA TABLET */
     body {
         background-image: linear-gradient(to top, var(--verde), var(--lilas))
     }
     
     section#login {
         width: 80vw;
+        height: 280px;
     }
 
     section#login > div#imagem {
@@ -22,13 +23,14 @@
     }
 }
 
-@media screen and (min-width: 993px) {
+@media screen and (min-width: 993px) { /* CONFIGURAÇÕES PARA DESKTOPS E GRANDES TELAS */
     body {
         background-image: linear-gradient(to top, var(--verde), var(--lilas))
     }
     
     section#login {
         width: 950px;
+        height: 350px;
     }
 
     section#login > div#imagem {
@@ -48,6 +50,7 @@
     }
 
     div#formulario > p {
-        font-size: 1.2em;
+        font-size: 1em;
+        margin: 20px 0px;
     }
 }
